--- a/src/Component/Side/Side.css
+++ b/src/Component/Side/Side.css
@@ -1,25 +1,79 @@
-
-
-.small-top{
-    display: flex;
-    gap: 60px;
-    margin: 60px;
-}
-.small-top2{
-    display: flex;
-    gap: 90PX;
-    
-    
-    /* border-bottom: 1px solid black; */
+.small-bop{
+  margin: 60px;
+  display: flex;
+  width: 100%;
+  height: 10%;
+  gap: 60px;
+  color:blue;
 }
 
-.small-text{
-   
-display: flex;
-gap: 120px;
-
+.small-top2 {
+  display: flex;
+  gap: 105px;
+  /* border-bottom: 1px solid black; */
 }
 
-.small-border{
-     border-bottom: 0.5px solid black; 
+.small-border {
+  border-top: 0.5px solid black;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 48px; 
+  color: rgb(112, 112, 69);
+}
+
+.dump {
+  margin: 2px;
+  font-size: 12px;
+  padding: 2px; 
+  color: rgb(112, 112, 69);
+}
+.h6-d{
+  color: rgb(112, 112, 69);
+  text-decoration: underline;
+}
+
+
+.dis-bord{
+  border: 0.3px solid rgb(64, 64, 64);
+  margin: 60px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  border-left: none;
+  border-right: none;
+  color:blue;
+}
+
+.input-d{
+  border: 0.7px solid black;
+  width: 70%;
+  border-radius: 3px;
+}
+.input-flex{
+ 
+  display: flex;
+  padding-top: 20px;
+  justify-content: space-between;
+ 
+}
+.input-box{
+  text-align: center;
+  color:white;
+  background-color: blue;
+  padding: 10px 16px;
+  font-size: 8px;
+}
+
+.sum-bord{
+  margin:60px;
+  color:blue;
+}
+
+.sum-pad{
+  padding-bottom: 20px;
+}
+
+.total-flex{
+  display: flex;
+  margin: 0px;
+  justify-content: space-between;
 }
